@@ -307,5 +307,11 @@ ADD_INTERFACE (Line_spanner, "line-spanner-interface",
 	       "@code{dashed-line}, @code{trill}, \n"
 	       "@code{dotted-line} or @code{zigzag}.\n"
 	       "\n",
-	       "gap zigzag-width zigzag-length thickness arrow");
+	       
+	       "arrow "
+	       "gap "
+	       "thickness "
+	       "zigzag-length "
+	       "zigzag-width "
+	       );
 
